[tool.poetry]
name = "10times-org-scraper"
version = "0.1.0"
description = ""
authors = ["Clueed <clueed@proton.me>"]
readme = "README.md"
packages = [{include = "10times_org_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
